<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/background_login"
        >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/splash_icon" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/start_color"
            android:hint="Email" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/start_color"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/start_color"
            android:hint="Username"
            android:visibility="gone"/>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_light"
            android:backgroundTint="@color/background_dark"
            android:text="Log in" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not registered yet?"
            android:textColor="@color/start_color"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="16sp" />

</LinearLayout>
